# researchclaw

./: .env.example  .gitignore  LICENSE  README.md  TUTORIALS.md  config.yaml  gateway  onboard  pyproject.toml  requirements.txt  setup_tui.py
.githooks/: commit-msg
.github/workflows/: publish.yml
researchclaw/: __init__.py  access_control.py  agent.py  ai_worker.py  command_translator.py  config.py  cron.py  env_manager.py  get_chat_id.py  git_manager.py  init.py  llm.py  messenger.py  models.py  onboard_git.py  orchestrator.py  planner.py  policy.py  reporter.py  research_engine.py  runner.py  sandbox_manager.py  states.py  storage.py  summarizer.py  utils.py  watcher.py
researchclaw/schema/: config.schema.json
researchclaw/tests/: __init__.py  test_abort_autopilot.py  test_access_control.py  test_agent_states.py  test_auto_pipeline.py  test_config.py  test_conversational.py  test_env_manager.py  test_git_manager.py  test_messenger.py  test_orchestrator_flow.py  test_policy.py  test_runner.py  test_sandbox_manager.py  test_storage.py  test_summarizer.py  test_utils.py  test_watcher.py
src/researchclaw/: __main__.py  cli.py  config.py  models.py  onboarding.py  permissions.py  repl.py  status.py
src/researchclaw/fsm/: __init__.py  _shared.py  decide.py  engine.py  evaluate.py  experiment.py  merge.py  plan.py  report.py  settings.py  states.py  view_summary.py
src/researchclaw/llm/: __init__.py  installer.py  provider.py
src/researchclaw/sandbox/: __init__.py  venv_manager.py
src/researchclaw/templates/: eval.sh.jinja2  run_exp.sh.jinja2
tests/: conftest.py  test_autopilot.py  test_config.py  test_decide.py  test_error_handling.py  test_eval_execute.py  test_eval_implement.py  test_experiment_execute.py  test_experiment_implement.py  test_fsm_engine.py  test_integration.py  test_llm.py  test_meta.py  test_models.py  test_onboarding.py  test_permissions.py  test_plan.py  test_publishability.py  test_repl.py  test_report.py  test_sandbox.py  test_settings.py  test_shared.py  test_status.py  test_venv_manager.py  test_view_summary.py
